vlib/v/parser/tests/invalid_fn_decl_script_err.out
vlib/v/parser/tests/invalid_fn_decl_script_err.vv:3:4: error: unexpected name `main`, expecting `(`
    1 | mynum := 10
    2 |
    3 | fn main() {
      |    ~~~~
    4 |     println(mynum)
    5 | }